--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="output.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
                 <ul class="navlinks flex flex-col gap-3 my-5">
                     <li class="cursor-pointer text-[#300B60] font-manrope font-bold relative hover:bg-slate-50" onclick="">Veb site
                         <i class="fa-solid fa-chevron-down text-sm"></i>
-                        <ul class="vewsites bg-white rounded-xl hidden absolute top-full -left-20 w-full py-5">
+                        <ul class="bg-white rounded-xl hidden absolute -left-20 py-5 px-5">
                             <li class="py-1 px-5 hover:bg-slate-50">
                                 <a href="#" class="flex items-center">
                                     <img class="mr-4 p-3 bg-blue-100 w-12 h-12 rounded-lg" src="img/saytlarin hazirlanmasi.svg" alt="link_img">
