--- a/index.html
+++ b/index.html
@@ -15,78 +15,199 @@
 
 <body>
 
-    <nav class="px-10 py-4 relative ">
-        <div class="parent_div flex justify-between items-center">
-            <a class="logo" href="#"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
-            <div class="links absolute top-0 right-0 p-10 h-screen w-2/3 hidden">
-                <i class="fa-solid fa-xmark text-2xl cursor-pointer p-1 absolute top-[25px] right-10"
-                    onclick="closeBar()"></i>
-                <ul class="navlinks flex flex-col lg:gap-3 my-5">
-                    <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative" onclick="">Veb site
-                        <i class="fa-solid fa-chevron-down text-sm"></i>
-                        <ul class="vebsayt_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
-                    </li>
-                    <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Domen
-                        <i class="fa-solid fa-chevron-down text-sm"></i>
-                        <ul class="domen_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
-                    </li>
-                    <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Hostinq
-                        <i class="fa-solid fa-chevron-down text-sm"></i>
-                        <ul class="hosting_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
-                    </li>
-                    <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Xidmətlər
-                        <i class="fa-solid fa-chevron-down text-sm"></i>
-                        <ul class="xidmet_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
-                    </li>
-                    <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Şirkət
-                        <i class="fa-solid fa-chevron-down text-sm"></i>
-                        <ul class="sirket_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="right_links absolute lg:static top-[280px] right-0 p-10 lg:p-0 w-2/3 md:w-fit hidden">
-                <div class="flex items-center gap-5">
-                    <select id="valuta" class="cursor-pointer w-[40px] my-3 font-bold text-xl text-[#300B60]">
-                        <option class="text-[#300B60] font-bold" value="manat">$</option>
-                        <option class="text-[#300B60] font-bold" value="dollar">₼</option>
-                    </select>
-                    <div class="lang_selection relative">
-                        <div class="selected flex gap-1 cursor-pointer w-[55px] p-2">
-                            <img src="img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
-                            <i class="fa-solid fa-chevron-down text-xs px-1"></i>
-                        </div>
-                        <div class="options absolute top-full">
-                            <div class="option cursor-pointer px-3 py-2 rounded-md" data-value="az">
+    <div class="navigation fixed w-full">
+        <nav class="px-10 py-4 relative bg-white z-[1000] mx-auto">
+            <div class="parent_div flex justify-between items-center">
+                <a class="logo" href="#"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
+                <div
+                    class="links bg-white absolute z-20 lg:static top-0 right-0 p-10 lg:p-0 h-screen w-2/3 hidden lg:flex lg:max-w-[1000px]">
+                    <i class="fa-solid fa-xmark text-2xl cursor-pointer p-1 absolute top-[18px] right-10"
+                        onclick="closeBar()"></i>
+                    <ul class="navlinks flex flex-col lg:flex-row my-5 lg:m-0 lg:items-center lg:gap-3">
+                        <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative" onclick="">Veb
+                            site
+                            <i class="fa-solid fa-chevron-down text-sm"></i>
+                            <ul class="vebsayt_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                        </li>
+                        <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Domen
+                            <i class="fa-solid fa-chevron-down text-sm"></i>
+                            <ul class="domen_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                        </li>
+                        <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Hostinq
+                            <i class="fa-solid fa-chevron-down text-sm"></i>
+                            <ul class="hosting_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                        </li>
+                        <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Xidmətlər
+                            <i class="fa-solid fa-chevron-down text-sm"></i>
+                            <ul class="xidmet_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                        </li>
+                        <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Şirkət
+                            <i class="fa-solid fa-chevron-down text-sm"></i>
+                            <ul class="sirket_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right_links absolute hidden z-30 lg:static lg:flex lg:items-center top-[280px] right-0 p-10 lg:p-0 w-2/3 md:w-fit">
+                    <div class="flex items-center gap-5">
+                        <select id="valuta" class="cursor-pointer w-[40px] my-3 lg:m-0 font-bold text-xl text-[#300B60]">
+                            <option class="text-[#300B60] font-bold" value="manat">$</option>
+                            <option class="text-[#300B60] font-bold" value="dollar">₼</option>
+                        </select>
+                        <div class="lang_selection relative">
+                            <div class="selected flex gap-1 cursor-pointer w-[55px] p-2">
                                 <img src="img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
+                                <i class="fa-solid fa-chevron-down text-xs px-1"></i>
                             </div>
-                            <div class="option cursor-pointer px-3 py-2 rounded-md" data-value="en">
-                                <img src="img/Flag_of_the_United_States.png" alt="USA Flag">
+                            <div class="options absolute top-full">
+                                <div class="option cursor-pointer px-3 py-2 rounded-md" data-value="az">
+                                    <img src="img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
+                                </div>
+                                <div class="option cursor-pointer px-3 py-2 rounded-md" data-value="en">
+                                    <img src="img/Flag_of_the_United_States.png" alt="USA Flag">
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="nav_btns flex flex-col lg:flex-row lg:items-center my-3 lg:ml-5 gap-5">
+                        <button
+                            class="teklif_btn text-white font-bold w-full md:w-[200px] rounded-md px-5 py-2 border-none">
+                            Qiymət Təklifi Al</button>
+                        <button class="login_btn text-[#732CE3] font-bold w-full md:w-[130px] rounded-md px-5 py-2">
+                            Daxil olun</button>
+                    </div>
                 </div>
-                <div class="nav_btns flex flex-col gap-5 my-3">
-                    <button
-                        class="teklif_btn text-white font-bold w-full md:w-[200px] rounded-md px-5 py-2 border-none">
-                        Qiymət Təklifi Al</button>
-                    <button class="login_btn text-[#732CE3] font-bold w-full md:w-[130px] rounded-md px-5 py-2">
-                        Daxil olun</button>
-                </div>
+                <div><i class="fa-solid fa-bars cursor-pointer text-xl p-1" onclick="openBar()"></i></div>
             </div>
-            <div><i class="fa-solid fa-bars cursor-pointer text-xl p-1" onclick="openBar()"></i></div>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
     <header>
         <div class="container">
-
+            <div class="header_content h-fit pb-10 pt-[100px] flex flex-col items-center justify-center gap-8">
+                <h1 class="text-center tracking-wide lg:px-10 lg:w-[800px] text-2xl md:text-3xl lg:text-5xl font-medium">
+                    Biznesinizi bizimlə rəqəmsal dünyada
+                    <span class="sm:mx-4 md:mx-6 text-blue-600 relative lg:mx-[30px] text-5">daha asan
+                        <div class="w-[135px] md:w-[165px] lg:w-[185px] h-[120px] absolute z-0 top-[-12px] md:top-[-12px] lg:top-[-10px] left-[-10px] md:left-[-10px]">
+                        <img class="w-full" src="img/daha asan.svg" alt=""></div>
+                    </span>yoldan irəliyə apar!
+                </h1>
+                <p class="text-center text-base md:text-lg lg:text-xl font-normal text-slate-500 lg:w-[500px]">
+                    Mütəxəssislərdən ibarət komandamız sizə
+                    müştəri dəstəyi və texniki yardım göstərmək üçün 24/7 hazırdır.</p>
+                <button
+                    class="border-[3px] border-[#A271F2] px-8 py-3 rounded-lg text-blue-600 text-[16px] font-medium md:mb-[153px]">
+                    Sayt Sifariş Et</button>
+            </div>
         </div>
     </header>
 
     <main>
         <div class="container">
-
+            <section id="sifarisIzle" class="py-16 flex flex-col lg:flex-row gap-10">
+                <div class="letf_site hidden md:flex flex-col gap-5 w-full lg:w-[60%]">
+                    <div class="three_cards gap-5 flex">
+                        <div class="w-[33%] rounded-lg bg-white px-4 py-5 sm:p-6 flex flex-col items-center justify-between
+                     h-[280px]">
+                            <dt class="truncate text-center text-sm font-medium text-gray-500">Tamamlandı</dt>
+                            <dd class="mt-1 font-semibold tracking-tight text-gray-600"><svg width="100" height="100">
+                                    <g transform="rotate(-90 50 50)">
+                                        <circle r="35" cx="50" cy="50" fill="transparent" stroke="lightgrey"
+                                            stroke-width="0.3rem" stroke-dasharray="219.9114857512855"
+                                            stroke-dashoffset="0" stroke-linecap="round"></circle>
+                                        <circle r="35" cx="50" cy="50" fill="transparent" stroke="#22BFA5"
+                                            stroke-width="0.3rem" stroke-dasharray="219.9114857512855"
+                                            stroke-dashoffset="0" stroke-linecap="round"></circle>
+                                    </g><text x="50%" y="50%" dominant-baseline="central" text-anchor="middle"
+                                        font-size="1.2em">100%</text>
+                                </svg></dd>
+                            <dd
+                                class="mt-1 md:text-xl text-sm font-bold tracking-tight text-gray-800 whitespace-nowrap">
+                                Sabina G.</dd>
+                            <dd class="mt-1 text-sm font-semibold tracking-tight text-gray-400">Designer</dd>
+                        </div>
+                        <div class="w-[33%] rounded-lg bg-white px-4 py-5 sm:p-6 flex flex-col items-center justify-between
+                     h-[280px]">
+                            <dt class="truncate text-center text-sm font-medium text-gray-500">Icradadır</dt>
+                            <dd class="mt-1 font-semibold tracking-tight text-gray-600"><svg width="100" height="100">
+                                    <g transform="rotate(-90 50 50)">
+                                        <circle r="35" cx="50" cy="50" fill="transparent" stroke="lightgrey"
+                                            stroke-width="0.3rem" stroke-dasharray="219.9114857512855"
+                                            stroke-dashoffset="0" stroke-linecap="round"></circle>
+                                        <circle r="35" cx="50" cy="50" fill="transparent" stroke="#fc5185"
+                                            stroke-width="0.3rem" stroke-dasharray="219.9114857512855"
+                                            stroke-dashoffset="21.99114857512855" stroke-linecap="round"></circle>
+                                    </g><text x="50%" y="50%" dominant-baseline="central" text-anchor="middle"
+                                        font-size="1.2em">90%</text>
+                                </svg></dd>
+                            <dd
+                                class="mt-1 md:text-xl text-sm font-bold tracking-tight text-gray-800 whitespace-nowrap">
+                                Fuad M.</dd>
+                            <dd class="mt-1 text-sm font-semibold tracking-tight text-gray-400"> Frontend Developer</dd>
+                        </div>
+                        <div class="w-[33%] rounded-lg bg-white px-4 py-5 sm:p-6 flex flex-col items-center justify-between
+                         h-[280px]">
+                            <dt class="truncate text-center text-sm font-medium text-gray-500">Icradadır</dt>
+                            <dd class="mt-1 font-semibold tracking-tight text-gray-600"><svg width="100" height="100">
+                                    <g transform="rotate(-90 50 50)">
+                                        <circle r="35" cx="50" cy="50" fill="transparent" stroke="lightgrey"
+                                            stroke-width="0.3rem" stroke-dasharray="219.9114857512855"
+                                            stroke-dashoffset="0" stroke-linecap="round"></circle>
+                                        <circle r="35" cx="50" cy="50" fill="transparent" stroke="#fc5185"
+                                            stroke-width="0.3rem" stroke-dasharray="219.9114857512855"
+                                            stroke-dashoffset="76.96902001294993" stroke-linecap="round"></circle>
+                                    </g><text x="50%" y="50%" dominant-baseline="central" text-anchor="middle"
+                                        font-size="1.2em">65%</text>
+                                </svg></dd>
+                            <dd
+                                class="mt-1 md:text-xl text-sm font-bold tracking-tight text-gray-800 whitespace-nowrap">
+                                Ahmad R.</dd>
+                            <dd class="mt-1 text-sm font-semibold tracking-tight text-gray-400">Backend Developer</dd>
+                        </div>
+                    </div>
+                    <div class="flex items-center w-[80%] mx-auto mt-5">
+                        <i class="fa-solid fa-circle-check text-3xl text-[#A271F2]"></i>
+                        <div class="w-full h-[2px] bg-[#A271F2]"></div>
+                        <i
+                            class="fa-solid fa-circle text-[10px] text-[#A271F2] p-2 border-[3px] border-[#A271F2] rounded-[50%]"></i>
+                        <div class="w-full h-[2px] bg-[#D1D5DB]"></div>
+                        <i class="fa-regular fa-circle text-3xl text-[#D1D5DB]"></i>
+                    </div>
+                </div>
+                <div class="lg:w-[40%] w-full sm:py-10 py-6 px-5 flex flex-col gap-4 justify-between items-center">
+                    <h2 class="font-bold text-[25px] text-center max-w-70">Vebsayt sifarişinizi izləyin</h2>
+                    <div class="flex flex-col gap-4 w-full">
+                        <input placeholder="Sifariş kodu"
+                            class="py-3 border border-[#676767] rounded-xl text-center focus:outline-none text-[#676767] placeholder:text-[#676767] placeholder:font-semibold"
+                            type="text">
+                        <button
+                            class="sfr_izle py-3 text-lg font-semibold bg-[#A271F2] hover:bg-violet-600 text-white rounded-xl">İzlə</button>
+                    </div>
+                    <p class="text-xs text-center text-gray-500">Sayt.az ilə sifarişlərinizə hər zaman nəzarət edin</p>
+                </div>
+            </section>
         </div>
+
+        <div class="container">
+            <section id="domenSearch" class="py-16">
+                <div class="domen_context flex flex-col gap-5 items-center">
+                    <h4 class="sm:text-[22px] md:text-[32px] tracking-[0.1px] text-center font-medium text-[#300B60]">
+                        Domen Adını Axtarın</h4>
+                    <p class="text-base font-normal tracking-[0.1px] text-[20px] max-w-[636px] text-[#300B60] text-center">
+                        .az domain sifariş etməmişdən öncə <span class="font-bold">whois.az</span> saytında yoxlayın</p>
+                    <p class="text-base font-normal tracking-[0.1px] text-[20px] max-w-[636px] text-[#300B60] text-center">
+                        Sayt.az-da .az domenləri yalnız aktiv hosting planı olan müştərilər üçün əlçatandır.
+                        Davam etməzdən əvvəl bizdən hosting aldığınıza əmin olun.
+                        <a class="font-bold" href="#">Ətraflı oxu...</a>
+                    </p>
+                    <form action="POST">
+                        <input type="text" class="border-[2px] border-gray-400 mt-[1px] pr-3 text-black outline-none placeholder:text-slate-400 ">
+                        <select id="" class="bg-transparent border-0 border-l-[1px] text-slate-500 outline-none"></select>
+                        <button class="bg-[#A271F2] hover:bg-[#51258b] active:bg-[#300B60] px-6 text-white rounded-[4px]">Axtar</button>
+                    </form>
+                </div>
+            </section>
+        </div>
+
     </main>
 
     <footer>
