--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:mx-0 gap-2">
-                    <div class="plan_card economic_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer hover:border-[#300B60] transition bg-[#FAFBFF]">
+                    <div class="plan_card economic_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -274,7 +274,7 @@
                         </div>
                         <button class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş et</button>
                     </div>
-                    <div class="plan_card selectedPlan standart_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer hover:border-[#300B60] transition bg-[#FAFBFF]">
+                    <div class="plan_card standart_plan selectedPlan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -302,7 +302,7 @@
                         </div>
                         <button class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş et</button>
                     </div>
-                    <div class="plan_card professional_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer hover:border-[#300B60] transition bg-[#FAFBFF]">
+                    <div class="plan_card professional_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
